# Consultor_CEP

./: README.md  mkdocs.yml  pyproject.toml
docs/: backend.md  frontend.md  index.md  projeto.md
src/: main.py
src/backend/: backend.py
src/backend/data_contract/: model.py
src/backend/request/: api.py
src/frontend/: app.py
src/tests/: api_tests.py  frontend_tests.py
